Se actualiza archivo index.html
Se actualiza archivo index.html, agregando Certificaciones y cursos.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
 							<!--<li><a href="#" class="button">Learn More</a></li> --> 
 							<!-- <p>Cuento con habilidades profesionales como:</p> -->
 							<li>Poseo competencias fundamentales como: alta capacidad de análisis, resolución de problemas, creatividad, orientación al detalle, pensamiento crítico,
-							trabajo en equipo, comunicación asertiva, innovación y aprendizaje continuo.<br />
+							trabajo en equipo, comunicación asertiva, innovación y aprendizaje continuo.<br /><br />
+							<strong>Certificaciones:</strong> Bot Builder Rocketbot Expert Level 3 (2023), Basic Agile Testing (2017), Scrum Master (2015), ISTQB Certified Tester, Fl. (2013).<br />
+							<br />
+							<strong>Cursos:</strong> Introducción al desarrollo de front-end (SENATIC, 2025), Automatización de procesos para la eficiencia organizacional (SENA, 2024), Análisis de datos (Generación TIC, 2024), Ingeniería de Requisitos (Udemy, 2024), Modelamiento de Procesos BPMN (Udemy, 2023), Fundamentos de Python (Cisco, 2023), Introducción a user stories (Udemy 2020).
 							A continuación, presento Demos de proyectos ordenados cronológicamente que he realizado con algún propósito académico o profesional.</li>
+							
 						</ul>
 					</section>
 
