--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<br />
 							<strong>Cursos:</strong> Programar en Python (Coursera - Meta, 2025),Prepárate para ser un Product Owner en Scrum (Udemy 2025), Introducción al desarrollo de front-end (SENATIC, 2025), Automatización de procesos para la eficiencia organizacional (SENA, 2024), Ingeniería de Requisitos (Udemy, 2024), Modelamiento de Procesos BPMN (Udemy, 2023), Fundamentos de Python (Cisco, 2023), Introducción a user stories (Udemy 2020).
 							<br /><br />
-							A continuación, presento Demos de proyectos ordenados cronológicamente que he realizado con algún propósito académico o profesional.</li>
+							A continuación, presento Demos de proyectos de automatización de procesos, ordenados cronológicamente que he realizado con algún propósito académico o profesional.</li>
 							
 						</ul>
 					</section>
